--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -16,7 +16,7 @@
       | 管理者権限
   .form-group 
     = f.label :password, 'パスワード'
-    = f.password_field :passwod, class: 'form-control'
+    = f.password_field :password, class: 'form-control'
   .form-group
     = f.label :password_confrimation, 'パスワード(確認)'
     = f.password_field :password_confrimation, class: 'form-control'
